# assignment-3-build-systems-maxhuizing2001-master

./: ASSIGNMENT.md  CMakeLists.txt  README.md  lift_simulation  main.cpp
inc/: buttons.h  lift.h  lift_down_state.h  lift_init_state.h  lift_state.h  lift_steady_state.h  lift_up_state.h
src/: buttons.cpp  lift.cpp  lift_down_state.cpp  lift_init_state.cpp  lift_state.cpp  lift_steady_state.cpp  lift_up_state.cpp
